# xkit

./: .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
crates/xkit-plugin/: Cargo.toml
crates/xkit-settings/: Cargo.toml
crates/xkit-tauri/: Cargo.toml  tauri.conf.json
crates/xkit-tauri/capabilities/: default.json
crates/xkit-tauri/icons/: icon.icns  logo.icns
crates/xkit-tauri/src/: lib.rs  main.rs
crates/xkit-tauri/src/cmd/: window.rs
crates/xkit-tauri/src/core/: tray.rs  window.rs
